fix: local workflows call to remote

--- a/.github/workflows/java-spring-build-push.yml
+++ b/.github/workflows/java-spring-build-push.yml
@@ -14,7 +14,7 @@ permissions:
     
 jobs:
   build:
-    uses: ./.github/workflows/java-spring-build-push-dockerhub.yml@main
+    uses: mdnahidmondol/shared-github-actions/.github/workflows/java-spring-build-push-dockerhub.yml@main
     secrets: inherit
     with:
       CONTAINER_IMAGE_NAME: sample-spring-boot-app
