--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,4 +13,5 @@ jobs:
     release:
         if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
         uses: mdnahidmondol/shared-github-actions/.github/workflows/release.yml@main
-        secrets: inherit
+        with:
+            GH_TOKEN: ${{ secrets.GH_TOKEN }}
