--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
 ## OIDC Configuration
 permissions:
     id-token: write
-    contents: read
+    contents: write  # Changed from read to write
     deployments: write
     statuses: write
 
@@ -13,5 +13,5 @@ jobs:
     release:
         if: "!contains(github.event.head_commit.message, 'ci skip') && !contains(github.event.head_commit.message, 'skip ci')"
         uses: mdnahidmondol/shared-github-actions/.github/workflows/release.yml@main
-        with:
+        secrets:
             GH_TOKEN: ${{ secrets.GH_TOKEN }}
