fix: release autorc fixed

--- a/.autorc
+++ b/.autorc
@@ -5,5 +5,5 @@
     "released"
   ],
   "owner": "mdnahidmondol",
-  "repo": "Sample Project to demonstrate the use of github actions"
+  "repo": "mdnahidmondol/java-spring-boot-sample-app"
 }
